--- a/src-tauri/src/index.html
+++ b/src-tauri/src/index.html
@@ -6,6 +6,9 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <script>
+      // Lazy-load Azure Speech SDK when we begin streaming later
+    </script>
     <div id="drag-handle" aria-label="Drag overlay" title="Drag overlay"></div>
     <div id="overlay">Overlay tick 0</div>
     <script type="module" src="main.js"></script>
