--- a/src-tauri/src/index.html
+++ b/src-tauri/src/index.html
@@ -10,7 +10,12 @@
       // Lazy-load Azure Speech SDK when we begin streaming later
     </script>
     <div id="drag-handle" aria-label="Drag overlay" title="Drag overlay"></div>
-    <div id="overlay">Overlay tick 0</div>
+    <div id="overlay">
+      <div id="ov-hl1" class="overlay-row overlay-history"></div>
+      <div id="ov-hl2" class="overlay-row overlay-history"></div>
+      <div id="ov-ll1" class="overlay-row overlay-live"></div>
+      <div id="ov-ll2" class="overlay-row overlay-live"></div>
+    </div>
     <script type="module" src="main.js"></script>
   </body>
 </html>
