--- a/src-tauri/src/launcher.html
+++ b/src-tauri/src/launcher.html
@@ -9,7 +9,7 @@
     <div class="panel">
       <h1>Speech Translator</h1>
       <div class="row">
-        <label><input type="checkbox" id="autoDetect" checked /> Auto detect source</label>
+        <label><input type="checkbox" id="autoDetect" /> Auto detect source</label>
       </div>
       <div class="row">
         <label>Source language</label>
