--- a/src-tauri/src/launcher.html
+++ b/src-tauri/src/launcher.html
@@ -8,6 +8,22 @@
   <body>
     <div class="panel">
       <h1>Speech Translator</h1>
+      <div class="ui-lang-row">
+        <select id="uiLang" class="ui-lang-select">
+          <option value="en">English</option>
+          <option value="es">Español</option>
+          <option value="fr">Français</option>
+          <option value="de">Deutsch</option>
+          <option value="hi">हिन्दी</option>
+          <option value="zh">中文</option>
+          <option value="ja">日本語</option>
+          <option value="ko">한국어</option>
+          <option value="ar">العربية</option>
+          <option value="pt">Português</option>
+          <option value="ru">Русский</option>
+          <option value="it">Italiano</option>
+        </select>
+      </div>
       <div class="row">
         <label><input type="checkbox" id="autoDetect" /> Auto detect source</label>
       </div>
